--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <!-- Your content goes here -->
-    <h1>Hello, world!</h1>
-    <!-- Add your JavaScript files here -->
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/bananafoster.html">Banana Foster</a></li>
+    </ul>
 </body>
 </html>
