Finish coconut bread pudding page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/bananafoster.html">Banana Foster</a></li>
+        <li><a href="recipes/coconutbread.html">Coconut Bread Pudding</a></li>
     </ul>
 </body>
 </html>
