modify bananafoster page using bootstrap

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/bananafoster.html">Banana Foster</a></li>
-        <li><a href="recipes/coconutbread.html">Coconut Bread Pudding</a></li>
+    <ul class="list-group">
+        <li class="list-group-item"><a href="recipes/bananafoster.html">Banana Foster</a></li>
+        <li class="list-group-item"><a href="recipes/coconutbread.html">Coconut Bread Pudding</a></li>
     </ul>
 </body>
 </html>
