--- a/recipes/bananafoster.html
+++ b/recipes/bananafoster.html
@@ -8,28 +8,39 @@
     <title>Banana Foster</title>
 </head>
 <body>
-    <h1>Banana Foster</h1>
-    <img src="../images/bananafoster.jpg" alt="Banana Foster image" height="300">
-    <h2><u>Description</u></h2>
-    <p>Bananas foster is made by cooking sliced bananas and walnuts in a buttery rum sauce and serving it over vanilla ice cream. A Father's Day favorite we all love!</p>
-    <div> Bananas foster is a dessert consisting of sliced bananas and a rum sauce served over vanilla ice cream. It originated in New Orleans and is often prepared tableside in restaurants as a flambé (a cooking technique in which alcohol 
-        is added to a hot pan, creating flames).</div>
-    <h2><u>Ingredients</u></h2>
-    <ul>
-        <li>Butter</li>
-        <li>Brown Sugar</li>
-        <li>Rum</li>
-        <li>Vanilla</li>
-        <li>Cinnamon</li>
-        <li>Bananas</li>
-        <li>Walnuts</li>
-        <li>Ice cream</li>
-    </ul>
-    <h2><u>Steps</u></h2>
-    <ol>
-        <li>Melt the butter in a skillet. Stir in the sugar, rum, vanilla, and cinnamon.</li>
-        <li>Add the bananas and walnuts, then cook until the bananas are soft.</li>
-        <li>Serve over ice cream.</li>
-    </ol>   
+    <div class="container">
+        <h1>Banana Foster</h1>
+        <img src="../images/bananafoster.jpg" alt="Banana Foster image" height="300" >
+        <h2><u>Description</u></h2>
+        <p>Bananas foster is made by cooking sliced bananas and walnuts in a buttery rum sauce and serving it over vanilla ice cream. A Father's Day favorite we all love!</p>
+        <div> Bananas foster is a dessert consisting of sliced bananas and a rum sauce served over vanilla ice cream. It originated in New Orleans and is often prepared tableside in restaurants as a flambé (a cooking technique in which alcohol 
+            is added to a hot pan, creating flames).</div>
+        <h2><u>Ingredients</u></h2>
+        <ul class="list-group">
+            <li class="list-group-item">Butter</li>
+            <li class="list-group-item">Brown Sugar</li>
+            <li class="list-group-item">Rum</li>
+            <li class="list-group-item">Vanilla</li>
+            <li class="list-group-item">Cinnamon</li>
+            <li class="list-group-item">Bananas</li>
+            <li class="list-group-item">Walnuts</li>
+            <li class="list-group-item">Ice cream</li>
+        </ul>
+        <h2><u>Steps</u></h2>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Melt the butter in a skillet. Stir in the sugar, rum, vanilla, and cinnamon.
+            </li>
+            <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Add the bananas and walnuts, then cook until the bananas are soft.
+            </li>
+            <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Serve over ice cream.
+            </li>
+        </ol>
+    </div>   
 </body>
 </html>
