--- a/recipes/coconutbread.html
+++ b/recipes/coconutbread.html
@@ -13,7 +13,7 @@
     <h2><u>Description</u></h2>
     <p>The classic bread pudding is enhanced with coconut flakes and coconut milk.</p>
     <h2><u>Ingredients</u></h2>
-    <ul>
+    <ul class="list-group">
         <li>2 tablespoons butter</li>
         <li>⅓ cup confectioners' sugar</li>
         <li>1 cup white sugar</li>
